# jumprope.md

./: .gitignore  ADVERSARIAL_REPORT.md  BENCH_V2_REPORT.md  CLAIMS.md  DECISIONS.md  README.md  REPRODUCE.md  pyproject.toml
.claude/skills/: ATTRIBUTION.md
.claude/skills/jumping-rope/: SKILL.md
.claude/skills/jumping-rope/scripts/: rope_ops.py
.github/workflows/: ci.yml
adapters/openrouter/: proxy.py
adapters/openwebui/: jumping_rope_pipe.py
jumping-rope/: .gitignore  ADVERSARIAL_REPORT.md  README.md
jumping-rope/.github/workflows/: ci.yml
jumping-rope/adapters/claude-commands/: README.md  jumprope-cut.md  jumprope-mode.md  jumprope-start.md  jumprope-status.md
jumping-rope/adapters/claude-skill/jumping-rope/scripts/: rope_ops.py
jumping-rope/adapters/claude-statusline/: README.md  preview.html  rope-demo.html  statusline.py
jumping-rope/adapters/openrouter/: proxy.py
jumping-rope/examples/: demo_session.py
jumping-rope/jumping_rope/: __init__.py  cli.py  compactor.py  handoff.py  notation.py  rope.py  session.py  turbovec.py
jumping-rope/tests/: conftest.py  test_density.py  test_jump.py  test_modes.py  test_pipe.py  test_profile_sanity.py  test_rope_roundtrip.py  test_skill_script.py
jumping-rope/tests/adversarial/: test_crash.py
jumping_rope/: cli.py  compactor.py  handoff.py  notation.py  rope.py  session.py  tokens.py  turbovec.py
promo/: README.md  launch.html
promo/memes/: meme1.html  meme2.html
results/hardened-scripted/: report.json
results/live-hardened-haiku/: result.json
ropebench/: CLAIMS.md  README.md  ROADMAP.md  THEORY.md  __init__.py  cli.py  models.py  pyproject.toml  regimes.py  transcript.py
ropebench/research/: JOURNAL.md  exp_t10_scribe.py  exp_t11_unsalient.py  exp_t5_ordering.py  exp_t6_capability_density.py  exp_t9_codescale.py
ropebench/results/hardened-scripted/: report_card.md
ropebench/ropebench/: cli.py  regimes.py  report.py
ropebench/tests/: test_e2e.py  test_models.py  test_theory_t5.py  test_theory_t6.py  test_theory_t9.py
ropebench/tests/fixtures/: session.jsonl
tests/: test_b6.py  test_budget.py  test_cli.py  test_e2e.py  test_handoff.py  test_models.py  test_pipe.py  test_proxy.py  test_transcript.py  test_turbovec.py
tests/adversarial/: test_adapter_payload.py  test_cold_recovery.py  test_injection.py  test_retrieval_quality.py  test_starvation.py  test_v11.py
