[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jumping-rope"
version = "1.0.0"
description = "Two-tier context-handoff system for LLM sessions: token-dense rope file + TurboVec overflow store"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Jumping Rope contributors" }]
keywords = ["llm", "context", "compaction", "memory", "agents"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["tiktoken>=0.7"]

[project.optional-dependencies]
st = ["sentence-transformers>=2.6"]
vec = ["sqlite-vec>=0.1"]
adapters = ["fastapi>=0.110", "httpx>=0.27", "pydantic>=2.6", "uvicorn>=0.29"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "sqlite-vec>=0.1",
]

[project.scripts]
jrope = "jumping_rope.cli:main"

[project.urls]
Homepage = "https://github.com/AlphaSaleAidan/jumping-rope"

# hatchling includes everything under the package dir (including _data/);
# a force-include of _data duplicates the files and breaks wheel builds
# from a git source ("second file added at the same path").
[tool.hatch.build.targets.wheel]
packages = ["jumping_rope"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["sqlite_vec", "sentence_transformers", "tiktoken"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
